2007-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* doprnt.c (emacs_doprnt_1):
	Add support for formatted printing of both longs and bignums as
	base 2.
	* editfns.c (Fformat):
	Document the new %b escape for #'format. 
	* lisp.h:
	Make ulong_to_bit_string available beside long_to_string. 
	* lread.c:
	Fix a bug where the integer base was being ignored in certain
	contexts; thank you Sebastian Freundt. This is necessary for
	correct behaviour of #'integer-to-bit-vector and
	#'bit-vector-to-integer, just added to subr.el
	* print.c (ulong_to_bit_string): New.
	Analagous to long_to_string, but used all the time when %b is
	encountered, since we can't pass that to sprintf. 	

2007-12-12  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in:
	Make the results of the checks for 
	FcConfigGetRescanInterval, FcConfigSetRescanInterval
	available.
	* font-mgr.h:
	If FcConfigSetRescanInterval and FcConfigGetRescanInterval are not
	available as functions, #define them to map to their old
	misspelled names. 	
	* font-mgr.c (Ffc_config_get_rescan_interval):
	* font-mgr.c (Ffc_config_set_rescan_interval):
	Use the correct spelling in
	FcConfigGetRescanInterval, FcConfigSetRescanInterval

2007-12-11  Aidan Kehoe  <kehoea@parhasard.net>

	* glyphs-eimage.c: 
	Merge Ron Isaacson's patch of
	3ggprxj7ifh.wl_Ron.Isaacson@morganstanley.com , originally from
	Gennady Khokhorin. Prevents library incompatibilities on Win32.

2007-12-11  Aidan Kehoe  <kehoea@parhasard.net>

	* fileio.c (Fsubstitute_in_file_name):
	On encountering non-existent environment variables or incorrect
	syntax for specifying environment variables (as is routine on
	Windows) don't error, instead pass the original strings through.

2007-12-05  Stephen J. Turnbull  <stephen@xemacs.org>

	* search.c (simple_search): Fix underrun in reverse search.
	(search_buffer): Clarify decision to use boyer_moore or not.

2007-12-06  Aidan Kehoe  <kehoea@parhasard.net>

	* tests.c (Ftest_data_format_conversion):